--- a/steep.glade
+++ b/steep.glade
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Sun Nov  2 21:03:44 2008 -->
+<!--Generated with glade3 3.4.5 on Tue Nov 11 00:39:17 2008 -->
 <glade-interface>
   <widget class="GtkWindow" id="wnd_main">
     <property name="title" translatable="yes">Steep</property>
+    <property name="window_position">GTK_WIN_POS_CENTER</property>
     <signal name="destroy" handler="on_wnd_main_destroy"/>
     <child>
       <widget class="GtkVBox" id="vbox_main">
@@ -58,51 +59,12 @@
           <widget class="GtkVBox" id="vbox_timers_ui">
             <property name="visible">True</property>
             <child>
-              <widget class="GtkVButtonBox" id="vbb_timers_radio">
+              <widget class="GtkTreeView" id="tv_timers">
                 <property name="visible">True</property>
-                <child>
-                  <widget class="GtkRadioButton" id="rb_greentea">
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="label" translatable="yes">Green (3 minutes)</property>
-                    <property name="response_id">0</property>
-                    <property name="active">True</property>
-                    <property name="draw_indicator">True</property>
-                    <signal name="toggled" handler="on_tea_selected"/>
-                  </widget>
-                </child>
-                <child>
-                  <widget class="GtkRadioButton" id="rb_blacktea">
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="label" translatable="yes">Black (5 minutes)</property>
-                    <property name="response_id">0</property>
-                    <property name="draw_indicator">True</property>
-                    <property name="group">rb_greentea</property>
-                    <signal name="toggled" handler="on_tea_selected"/>
-                  </widget>
-                  <packing>
-                    <property name="position">1</property>
-                  </packing>
-                </child>
-                <child>
-                  <widget class="GtkRadioButton" id="rb_herbaltea">
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="label" translatable="yes">Herbal (7 minutes)</property>
-                    <property name="response_id">0</property>
-                    <property name="draw_indicator">True</property>
-                    <property name="group">rb_greentea</property>
-                    <signal name="toggled" handler="on_tea_selected"/>
-                  </widget>
-                  <packing>
-                    <property name="position">2</property>
-                  </packing>
-                </child>
+                <property name="can_focus">True</property>
+                <signal name="row_activated" handler="on_tv_row_activated"/>
+                <signal name="cursor_changed" handler="on_tv_timers_changed"/>
               </widget>
-              <packing>
-                <property name="expand">False</property>
-              </packing>
             </child>
           </widget>
           <packing>
